[gd_scene load_steps=3 format=2]

[ext_resource path="res://ui/ships/DesignItem.tscn" type="PackedScene" id=1]
[ext_resource path="res://ui/ships/ShipDesignPanel.gd" type="Script" id=2]

[node name="DesignList" type="Panel"]
anchor_right = 1.0
anchor_bottom = 1.0
mouse_filter = 1
size_flags_horizontal = 3
size_flags_vertical = 3
script = ExtResource( 2 )
__meta__ = {
"_edit_use_anchors_": false
}
DesignItem = ExtResource( 1 )

[node name="All" type="GridContainer" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
size_flags_horizontal = 3
size_flags_vertical = 3
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Top" type="GridContainer" parent="All"]
margin_right = 1600.0
margin_bottom = 876.0
size_flags_horizontal = 3
size_flags_vertical = 3
columns = 2

[node name="List" type="GridContainer" parent="All/Top"]
margin_right = 1584.0
margin_bottom = 876.0
mouse_filter = 2
size_flags_horizontal = 3
size_flags_vertical = 3

[node name="Scroll" type="VScrollBar" parent="All/Top"]
margin_left = 1588.0
margin_right = 1600.0
margin_bottom = 876.0
step = 1.0

[node name="Buttons" type="GridContainer" parent="All"]
margin_top = 880.0
margin_right = 1600.0
margin_bottom = 900.0
size_flags_horizontal = 3
columns = 6
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Add" type="Button" parent="All/Buttons"]
margin_right = 37.0
margin_bottom = 20.0
hint_tooltip = "Add the design you're currently editing as a new design."
text = "Add"

[node name="Change" type="Button" parent="All/Buttons"]
margin_left = 41.0
margin_right = 103.0
margin_bottom = 20.0
hint_tooltip = "Replace this design with the one you're currently editing."
text = "Replace"

[node name="Remove" type="Button" parent="All/Buttons"]
margin_left = 107.0
margin_right = 171.0
margin_bottom = 20.0
hint_tooltip = "Remove this design from the universe's ship design list."
text = "Remove"

[node name="Open" type="Button" parent="All/Buttons"]
margin_left = 175.0
margin_right = 222.0
margin_bottom = 20.0
hint_tooltip = "Open this design so you can edit it."
text = "Open"

[node name="Cancel" type="Button" parent="All/Buttons"]
margin_left = 226.0
margin_right = 280.0
margin_bottom = 20.0
text = "Cancel"

[node name="Zoom" type="HScrollBar" parent="All/Buttons"]
margin_left = 284.0
margin_right = 1600.0
margin_bottom = 20.0
hint_tooltip = "Zoom"
size_flags_horizontal = 3
size_flags_vertical = 1
step = 1.0
page = 1.0

[connection signal="resized" from="." to="." method="_on_DesignList_resized"]
[connection signal="value_changed" from="All/Top/Scroll" to="." method="_on_Scroll_value_changed"]
[connection signal="pressed" from="All/Buttons/Add" to="." method="_on_Add_pressed"]
[connection signal="pressed" from="All/Buttons/Change" to="." method="_on_Change_pressed"]
[connection signal="pressed" from="All/Buttons/Remove" to="." method="_on_Remove_pressed"]
[connection signal="pressed" from="All/Buttons/Open" to="." method="_on_Open_pressed"]
[connection signal="pressed" from="All/Buttons/Cancel" to="." method="_on_Cancel_pressed"]
[connection signal="value_changed" from="All/Buttons/Zoom" to="." method="_on_Zoom_value_changed"]
